--- a/index.ipynb
+++ b/index.ipynb
@@ -155,7 +155,8 @@
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
     "    if restaurant['rating'] > alternative['rating'] = true\n",
-    "        print()\n",
+    "        print(restaurant['name'])\n",
+    "        else \n",
     "    "
    ]
   },
