--- a/index.ipynb
+++ b/index.ipynb
@@ -156,7 +156,8 @@
     "def better_restaurant(restaurant, alternative):\n",
     "    if restaurant['rating'] > alternative['rating'] = true:\n",
     "        print(restaurant['name'])\n",
-    "    else \n",
+    "    else:\n",
+    "        print(alternative[''])\n",
     "    "
    ]
   },
