--- a/index.ipynb
+++ b/index.ipynb
@@ -163,7 +163,8 @@
    ],
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
-    "    if restaurant['rating'] > alternative['rating'] = true:\n",
+    "    if\n",
+    "    restaurant['rating'] > alternative['rating']\n",
     "        print(restaurant['name'])\n",
     "    else:\n",
     "        print(alternative['name'])\n",
