--- a/index.ipynb
+++ b/index.ipynb
@@ -163,8 +163,8 @@
    ],
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
-    "    if\n",
-    "    restaurant['rating'] > alternative['rating']\n",
+    "        restaurant['rating'] > alternative['rating']\n",
+    "    if True\n",
     "        print(restaurant['name'])\n",
     "    else:\n",
     "        print(alternative['name'])\n",
