--- a/index.ipynb
+++ b/index.ipynb
@@ -149,22 +149,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-6-297a06a659bb>, line 2)",
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-7-f45545c6c08e>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-297a06a659bb>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    if restaurant['rating'] > alternative['rating'] = true:\u001b[0m\n\u001b[0m                                                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-f45545c6c08e>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    restaurant['rating'] > alternative['rating']\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
      ]
     }
    ],
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
-    "        restaurant['rating'] > alternative['rating']\n",
-    "    if True\n",
+    "restaurant['rating'] > alternative['rating']\n",
+    "    if True:\n",
     "        print(restaurant['name'])\n",
     "    else:\n",
     "        print(alternative['name'])\n",
