Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -155,7 +155,7 @@
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
     "    restaurant['rating'] > alternative['rating']\n",
-    "    if True:\n",
+    "    if True\n",
     "        print(restaurant['name'])\n",
     "    else:\n",
     "        print(alternative['name'])\n",
