--- a/index.ipynb
+++ b/index.ipynb
@@ -154,8 +154,7 @@
    "outputs": [],
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
-    "    restaurant['rating'] > alternative['rating']\n",
-    "    if True\n",
+    "    if restaurant['rating'] > alternative['rating']\n",
     "        print(restaurant['name'])\n",
     "    else:\n",
     "        print(alternative['name'])\n",
