--- a/index.ipynb
+++ b/index.ipynb
@@ -203,7 +203,8 @@
    "outputs": [],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
-    "    if restaurant['price'] < altern"
+    "    if restaurant['price'] < alternative['price']\n",
+    "    "
    ]
   },
   {
