--- a/index.ipynb
+++ b/index.ipynb
@@ -204,7 +204,7 @@
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
     "    if restaurant['price'] < alternative['price']\n",
-    "    "
+    "        print(restaurant[])"
    ]
   },
   {
