--- a/index.ipynb
+++ b/index.ipynb
@@ -204,7 +204,9 @@
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
     "    if restaurant['price'] < alternative['price']\n",
-    "        print(restaurant[])"
+    "        print(restaurant['name'])\n",
+    "    else:\n",
+    "        print(s)"
    ]
   },
   {
