--- a/index.ipynb
+++ b/index.ipynb
@@ -308,7 +308,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    for index"
+    "    for restaurants in"
    ]
   },
   {
