--- a/index.ipynb
+++ b/index.ipynb
@@ -308,7 +308,8 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    for index in restaurants:"
+    "    for index in restaurants:\n",
+    "        "
    ]
   },
   {
