--- a/index.ipynb
+++ b/index.ipynb
@@ -309,7 +309,7 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    for index in restaurants:\n",
-    "        if "
+    "        if restaurant['is_closed'] "
    ]
   },
   {
