--- a/index.ipynb
+++ b/index.ipynb
@@ -309,7 +309,8 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    for index in restaurants:\n",
-    "        if restaurant['is_closed'] "
+    "        if restaurant['is_closed'] = false\n",
+    "            print "
    ]
   },
   {
