Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -308,9 +308,10 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
+    "    open_restau\n",
     "    for index in restaurants:\n",
     "        if restaurant['is_closed'] = false\n",
-    "            p"
+    "            "
    ]
   },
   {
