--- a/index.ipynb
+++ b/index.ipynb
@@ -320,7 +320,7 @@
     "    open_restaurants = []\n",
     "    for index in restaurants:\n",
     "        if restaurant['is_closed'] = false\n",
-    "            open_restaurants.append()"
+    "            open_restaurants.append(restaurant['name'])"
    ]
   },
   {
