Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -320,7 +320,8 @@
     "    open_restaurants = []\n",
     "    for index in restaurants:\n",
     "        if restaurant['is_closed'] = false\n",
-    "            open_restaurants.append(restaurant['name'])"
+    "            open_restaurants.append(restaurant['name'])\n",
+    "            "
    ]
   },
   {
