--- a/index.ipynb
+++ b/index.ipynb
@@ -303,15 +303,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-33-c8a1941f23e2>, line 4)",
+     "evalue": "invalid syntax (<ipython-input-34-c4fce8428290>, line 4)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-33-c8a1941f23e2>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    if restaurant['is_closed'] = false\u001b[0m\n\u001b[0m                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-34-c4fce8428290>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    if restaurant['is_closed'] = false:\u001b[0m\n\u001b[0m                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -319,7 +319,7 @@
     "def open_restaurants(restaurants):\n",
     "    open_restaurants = []\n",
     "    for index in restaurants:\n",
-    "        if restaurant['is_closed'] = false\n",
+    "        if restaurant['is_closed'] = false:\n",
     "            open_restaurants.append(restaurant['name'])\n",
     "            "
    ]
