Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -319,7 +319,7 @@
     "def open_restaurants(restaurants):\n",
     "    open_restaurants = []\n",
     "    for index in restaurants:\n",
-    "        if restaurant['is_closed'] = false:\n",
+    "        restaurant['is_closed'] = false\n",
     "            open_restaurants.append(restaurant['name'])\n",
     "            "
    ]
