Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -303,15 +303,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-34-c4fce8428290>, line 4)",
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (<ipython-input-35-742e75d83f74>, line 5)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-34-c4fce8428290>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    if restaurant['is_closed'] = false:\u001b[0m\n\u001b[0m                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-35-742e75d83f74>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    open_restaurants.append(restaurant['name'])\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
      ]
     }
    ],
