Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -320,6 +320,7 @@
     "    open_restaurants = []\n",
     "    for index in restaurants:\n",
     "        restaurant['is_closed'] = false\n",
+    "        if False:\n",
     "            open_restaurants.append(restaurant['name'])\n",
     "            "
    ]
