Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -313,7 +313,7 @@
     "        index['is_closed'] = False\n",
     "        if False:\n",
     "            open_restaurants.append(restaurant['name'])\n",
-    "            "
+    "    print"
    ]
   },
   {
