--- a/index.ipynb
+++ b/index.ipynb
@@ -204,9 +204,7 @@
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
     "    if restaurant['price'] < alternative['price']:\n",
-    "        print(restaurant['name'])\n",
-    "    else:\n",
-    "        print(alternative['name'])"
+    "        return"
    ]
   },
   {
