Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -198,13 +198,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
     "    if restaurant['price'] < alternative['price']:\n",
-    "        return"
+    "        return restaurant\n",
+    "    return alternative"
    ]
   },
   {
