--- a/index.ipynb
+++ b/index.ipynb
@@ -203,7 +203,7 @@
    "outputs": [],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
-    "    if restaurant['price'] < alternative['price']:\n",
+    "    if len(restaurant['price'] < alternative['price']:\n",
     "        return restaurant\n",
     "    return alternative"
    ]
