--- a/index.ipynb
+++ b/index.ipynb
@@ -198,19 +198,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
-    "    if len(restaurant['price'] < alternative['price']:\n",
+    "    if len(restaurant['price']) < len(alternative['price']):\n",
     "        return restaurant\n",
     "    return alternative"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
