Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -301,7 +301,7 @@
     "    for index in restaurants:\n",
     "        index['is_closed'] = False\n",
     "        if False:\n",
-    "            open_restaurants.append(restaurant['name'])\n",
+    "            open_restaurants.append(restaurant)\n",
     "    print(open_restaurants)"
    ]
   },
