--- a/index.ipynb
+++ b/index.ipynb
@@ -302,7 +302,7 @@
     "        index['is_closed'] = False\n",
     "        if False:\n",
     "            open_restaurants.append(restaurant)\n",
-    "    print(open_restaurants)"
+    "    return open_restaurants"
    ]
   },
   {
