Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -299,7 +299,7 @@
     "def open_restaurants(restaurants):\n",
     "    open_restaurants = []\n",
     "    for index in restaurants:\n",
-    "        index['is_closed'] = \n",
+    "        index['is_closed'] = False\n",
     "        if False:\n",
     "            open_restaurants.append(restaurant)\n",
     "    return open_restaurants"
