--- a/index.ipynb
+++ b/index.ipynb
@@ -298,9 +298,9 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    open_restaurants = []\n",
-    "    for index in restaurants:\n",
+    "    for restaurant in restaurants:\n",
     "        if not index['is_closed']:\n",
-    "            open_restaurants.append(restaurants)\n",
+    "            open_restaurants.append(restaurant)\n",
     "    return open_restaurants"
    ]
   },
