--- a/index.ipynb
+++ b/index.ipynb
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
        "False"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,16 +263,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
        "2"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
