--- a/index.ipynb
+++ b/index.ipynb
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -292,21 +292,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    open_restaurants = []\n",
+    "    open = []\n",
     "    for restaurant in restaurants:\n",
     "        if not restaurant['is_closed']:\n",
-    "            open_restaurants.append(restaurant)\n",
-    "    return open_restaurants"
+    "            open.append(restaurant)\n",
+    "    return open"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
        "2"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
